# sandbox_game

./: .gitmodules  CMakeLists.txt
assets/shaders/: frag.fs  vert.vs
headers/core/: camera.hpp  engine.hpp  font.hpp  input.hpp  mouse.hpp  timer.hpp  types.hpp  window.hpp
headers/draw/: primitives.hpp  shader.hpp  texture.hpp
headers/logger/: logger.hpp
headers/profiler/: profiler.hpp
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb/: stb_image.h
src/: main.cpp
src/core/: engine.cpp  font.cpp  input.cpp  mouse.cpp  timer.cpp  window.cpp
src/draw/: primitives.cpp  shader.cpp  texture.cpp
src/logger/: logger.cpp
